[gd_scene load_steps=3 format=2]

[ext_resource path="res://Bullets/EnemyBullet1.tscn" type="PackedScene" id=1]
[ext_resource path="res://GatlingBullet.gd" type="Script" id=2]

[node name="GatlingBullet" instance=ExtResource( 1 )]
script = ExtResource( 2 )
speed = 0
damage = 0

[node name="RealLifetime" type="Timer" parent="." index="3"]

[node name="Pause" type="Timer" parent="." index="4"]
[connection signal="timeout" from="RealLifetime" to="." method="_on_RealLifetime_timeout"]
[connection signal="timeout" from="Pause" to="." method="_on_Pause_timeout"]
